<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:drawablePadding="@dimen/drawable_to_text_margin"
            android:gravity="start|center"
            android:text="@string/acceptanceShop" />

        <TextView
            android:id="@+id/acceptanceShop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:drawableEnd="@drawable/ic_sr_blue"
            android:gravity="start|center"
            android:hint="@string/branchCodeInputAttention"
            android:paddingStart="@dimen/drawer_margin"
            android:paddingEnd="0dp"
            android:textSize="@dimen/drawer_text_size" />
    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:drawablePadding="@dimen/drawable_to_text_margin"
            android:gravity="start|center"
            android:text="@string/transferCode" />

        <EditText
            android:id="@+id/transferCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:gravity="start|center"
            android:hint="@string/inputCodePlease"
            android:paddingStart="@dimen/drawer_margin"
            android:paddingEnd="0dp"
            android:textSize="@dimen/drawer_text_size" />

        <Button
            android:id="@+id/submitAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:drawablePadding="@dimen/drawable_to_text_margin"
            android:gravity="center"
            android:text="@string/submitAll" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/swipeMenuListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />
</androidx.constraintlayout.widget.ConstraintLayout>